---------------------------------------------------------------------------------------------------
Version: 1.8.15
Date: 12 March 2023
  Bugfixes:
    - Fixed crash when quick toggling back a spidertron that contained filtered slots or logistic requests for items from mods that have been removed
---------------------------------------------------------------------------------------------------
Version: 1.8.14
Date: 22 February 2023
  Features:
    - Patrol remote pipette (Control + Shift + Q) always gives a temporary remote (compatibility with Spidertron Patrols 2.4.0)
---------------------------------------------------------------------------------------------------
Version: 1.8.13
Date: 12 December 2022
  Features:
    - Spidertron pathfinder now navigates around large buildings (10x10 or greater)
    - Distance between waypoints decreased with smaller spidertrons, and increased with larger spidertrons
  Bugfixes:
    - Improved compatibility with AAI Ironclad (requires future Ironclad update to work fully)
---------------------------------------------------------------------------------------------------
Version: 1.8.12
Date: 28 November 2022
  Bugfixes:
    - Fixed crash when a spidertron without the logistics tab (e.g. from Insectitronics) enters a vehicle or the player
    - Fixed spider babies from Broodmother generating retrievable corpses
---------------------------------------------------------------------------------------------------
Version: 1.8.11
Date: 5 October 2022
  Bugfixes:
    - Fixed spidertrons being unable to exit trains
    - Fixed Tips & Tricks simulations not working with Krastorio2
---------------------------------------------------------------------------------------------------
Version: 1.8.10
Date: 30 September 2022
  Bugfixes:
    - Fixed game freeze when quick-toggling a spidertron where it can't be placed
    - Removed ability to issue a pathfind command to docked spidertrons from Space Spidertron